# fx_early_join

./: README.md
mod/FxEarlyJoin/: README.md  addNelEarly.lua  libfx_early_join.nro
mod/FxEarlyJoin/patches/msbt/message/us/usen/: f001.txt  f002.txt  f003.txt  gamedata.txt
mod/FxEarlyJoin/patches/scripts/: Common.txt  Common_E.txt  E001.txt  E002.txt  E003.txt  E004.txt  E005.txt  E006.txt  F001.txt  F002.txt  F003.txt  Hub_SolanelCommon_P3.txt  M000.txt  M000.txt.bak
mod/FxEarlyJoin/patches/xml/: Chapter.xml  Chapter.xml.bak  Person.xml  Person.xml.bak
mod/FxEarlyJoin/patches/xml/dispos/: E001.xml  E002.xml  E003.xml  E004.xml  E005.xml  E006.xml  F003.xml  M000.xml  N001_1.xml  N002_1.xml  N003_1.xml
plugin/: Cargo.toml
plugin/src/: lib.rs
