[package]
name = "fx_early_join"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
cobapi = { git = "https://github.com/atarng/cobapi", branch="call_lua_from_code" }
engage = { git = "https://github.com/atarng/engage", branch="call_lua_from_code" }
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
unity = { git = "https://github.com/DivineDragonFanClub/unity" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
